--- a/UltSigPro/USPStyleSheet.css
+++ b/UltSigPro/USPStyleSheet.css
@@ -1,26 +1,37 @@
+* {
+	-usp-light-grey: #DDD9D9;
+	-usp-dark-grey: #5B5B5B;
+	-usp-light-blue: #127A93;
+	-usp-font-color: #FFFFFF
+}
+
 .root {
 	-fx-font-size: 9pt;
-	-fx-background: #DDD9D9;
+	-fx-background: -usp-light-grey;
 }
 
 .plusButton {
-	-fx-background-color: #5B5B5B;
+	-fx-background-color: -usp-dark-grey;
 	-fx-graphic: url('icons/plusButtonIcon.png');
 	-fx-padding: 0px;  
 }
 
 .plusButton:hover {
-    -fx-effect: dropshadow(three-pass-box, #127A93, 5, 0.05, 0, 1);
+    -fx-effect: dropshadow(three-pass-box, -usp-light-blue, 5, 0.05, 0, 1);
 }
 
 .minusButton {
-	-fx-background-color: #5B5B5B;
+	-fx-background-color: -usp-dark-grey;
 	-fx-graphic: url('icons/minusButtonIcon.png');
 	-fx-padding: 0px;
 }
 
 .minusButton:hover {
-	-fx-effect: dropshadow(three-pass-box, #127A93, 5, 0.05, 0, 1);
+	-fx-effect: dropshadow(three-pass-box, -usp-light-blue, 5, 0.05, 0, 1);
+}
+
+.table-view {
+	-fx-background-color: transparent;
 }
 
 .table-view .column-header {
@@ -28,25 +39,25 @@
 }
 
 .table-view .column-header-background {
-    -fx-background-color: #5B5B5B;
+    -fx-background-color: -usp-dark-grey;
 }
 
 .table-view .column-header-background .label{
     -fx-background-color: transparent;
-    -fx-text-fill: white;
+    -fx-text-fill: -usp-font-color;
 }
 
 .titled-pane {
-	-fx-text-fill: white;
+	-fx-text-fill: -usp-font-color;
 	-fx-text-alignment: center;
 }
 
 .titled-pane .title {
-	-fx-background-color: #5B5B5B;
+	-fx-background-color: -usp-dark-grey;
 }
 
 .titled-pane .title .text {
-	-fx-text-fill: white;
+	-fx-text-fill: -usp-font-color;
 	-fx-text-alignment: center;
 	-fx-font-weight: bold;
 }
