Unify and hover

--- a/UltSigPro/USPStyleSheet.css
+++ b/UltSigPro/USPStyleSheet.css
@@ -2,6 +2,7 @@
 	-usp-light-grey: #DDD9D9;
 	-usp-dark-grey: #5B5B5B;
 	-usp-light-blue: #127A93;
+	-usp-black: #000000;
 	-usp-font-color: #FFFFFF
 }
 
